--- a/views/mail.ejs
+++ b/views/mail.ejs
@@ -21,7 +21,7 @@
           </div>
 
           <tr>
-            <td align="center" style="padding:0px 40px 40px 40px"><p style="color:#262626; font-size:32px; text-align:center; font-family: Verdana, Geneva, sans-serif">Hello! <br> <%= name %></p>
+            <td align="center" style="padding:0px 40px 40px 40px"><p style="color:#262626; font-size:32px; text-align:center; font-family: Verdana, Geneva, sans-serif">Hello! <br> <%= fullname %></p>
                 <b style="color:#000000; font-size:16px; text-align:left; font-family: Verdana, Geneva, sans-serif; line-height:22px ">
                 Congratulations!!!</b><br/>
                 Thank you for creating an account with "Podcast Platform", <br/>Now you can stay your journey <br/>
